16_Workflow-Orchestration-with-Apache-Airflow/Praktikum/Eksplorasi/logs/dag_id=fruits_dag/run_id=scheduled__2023-04-04T000000+0000/task_id=create_fruits_table/attempt=2.log
[2024-04-09T19:01:39.220+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-09T19:01:39.524+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-04-04T00:00:00+00:00 [queued]>
[2024-04-09T19:01:39.664+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-04-04T00:00:00+00:00 [queued]>
[2024-04-09T19:01:39.698+0000] {taskinstance.py:2303} INFO - Starting attempt 2 of 2
[2024-04-09T19:01:39.903+0000] {taskinstance.py:2327} INFO - Executing <Task(PostgresOperator): create_fruits_table> on 2023-04-04 00:00:00+00:00
[2024-04-09T19:01:39.946+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'fruits_dag', 'create_fruits_table', 'scheduled__2023-04-04T00:00:00+00:00', '--job-id', '312', '--raw', '--subdir', 'DAGS_FOLDER/fruit_table_dag.py', '--cfg-path', '/tmp/tmpxm0dtk2u']
[2024-04-09T19:01:39.954+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=2803) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-04-09T19:01:39.963+0000] {standard_task_runner.py:91} INFO - Job 312: Subtask create_fruits_table
[2024-04-09T19:01:39.970+0000] {standard_task_runner.py:63} INFO - Started process 2813 to run task
[2024-04-09T19:01:40.072+0000] {task_command.py:426} INFO - Running <TaskInstance: fruits_dag.create_fruits_table scheduled__2023-04-04T00:00:00+00:00 [running]> on host fd38698150f5
[2024-04-09T19:01:40.757+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='fruits_dag' AIRFLOW_CTX_TASK_ID='create_fruits_table' AIRFLOW_CTX_EXECUTION_DATE='2023-04-04T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-04-04T00:00:00+00:00'
[2024-04-09T19:01:40.768+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-04-09T19:01:40.770+0000] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS fruits (
            id SERIAL PRIMARY KEY,
            name VARCHAR(50) NOT NULL,
            calories DECIMAL NOT NULL,
            fat DECIMAL NOT NULL,
            sugar DECIMAL NOT NULL,
            carbohydrates DECIMAL NOT NULL,
            protein DECIMAL NOT NULL,
        );

        -- Perbaikan: Menambahkan sequence fruits_id_seq
        CREATE SEQUENCE IF NOT EXISTS fruits_id_seq
            START WITH 1
            INCREMENT BY 1
            NO MINVALUE
            NO MAXVALUE
            CACHE 1;
    
[2024-04-09T19:01:40.889+0000] {base.py:84} INFO - Using connection ID 'eksplorasi_postgres' for task execution.
[2024-04-09T19:01:40.935+0000] {base.py:84} INFO - Using connection ID 'eksplorasi_postgres' for task execution.
[2024-04-09T19:01:40.956+0000] {sql.py:457} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS fruits (
            id SERIAL PRIMARY KEY,
            name VARCHAR(50) NOT NULL,
            calories DECIMAL NOT NULL,
            fat DECIMAL NOT NULL,
            sugar DECIMAL NOT NULL,
            carbohydrates DECIMAL NOT NULL,
            protein DECIMAL NOT NULL,
        );

        -- Perbaikan: Menambahkan sequence fruits_id_seq
        CREATE SEQUENCE IF NOT EXISTS fruits_id_seq
            START WITH 1
            INCREMENT BY 1
            NO MINVALUE
            NO MAXVALUE
            CACHE 1;
    , parameters: None
[2024-04-09T19:01:40.966+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-04-09T19:01:40.978+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 10:         );
                 ^

[2024-04-09T19:01:41.026+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=fruits_dag, task_id=create_fruits_table, execution_date=20230404T000000, start_date=20240409T190139, end_date=20240409T190141
[2024-04-09T19:01:41.106+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 312 for task create_fruits_table (syntax error at or near ")"
LINE 10:         );
                 ^
; 2813)
[2024-04-09T19:01:41.215+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-09T19:01:41.270+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-09T19:01:41.396+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-09T19:01:41.436+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
